--- a/style.css
+++ b/style.css
@@ -8,50 +8,57 @@
 	--color-light-grey: #dfdfdf;
 }
 
+html,
 body {
 	background-color: var(--color-black);
 	margin: 0;
+	padding: 0;
 }
 
 * {
 	box-sizing: border-box;
 }
-
-/* 동시 2개 지정 시 , 로 구분! */
 .nav,
 .section {
-	background-color: transparent;
+	position: relative;
+	background-color: var(--color-black);
 	display: flex;
-	flex-flow: column wrap;
+	flex-flow: column nowrap;
 	justify-content: space-around;
 	align-items: center;
 	width: 100%;
 	height: 100%;
 	/* 절대 기준이 없으면 space-around, space-between, flex-end 등 모두 제대로 셋팅되지 않음.
   시작점 및 기준이 없기 때문. %는 상대비율이기 때문에 기준이 되지 못한다. */
-	margin: 0;
-	padding: 0;
+}
+
+.section {
+	padding: 0 0 5em 0;
 }
 
 .nav__logo {
 	max-width: 100%;
-	margin-top: 3em;
+	margin-top: 5em;
 }
 
 .nav__logo > img {
 	max-width: 100%;
 }
 
-.nav__menu {
+ul {
 	list-style: none;
+	margin: 0;
 	padding: 0;
+}
 
+.nav__menu {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-around;
 	align-items: center;
 	width: 25em;
 	max-width: 25em;
+	margin: 1em 0 0.5em 0;
 }
 
 .nav__menu > li > img {
@@ -79,13 +86,25 @@ body {
 .section__list {
 	width: 26em;
 	max-width: 26em;
-	height: 35em;
+	height: 38em;
+	display: flexbox;
+	overflow: auto;
 }
 .section__item {
 	background-color: var(--color-white);
-	display: block;
+	display: flex;
+	justify-content: row nowrap;
+	align-items: center;
 	height: 4em;
 	border-radius: 0.3em;
-	width: 100%;
-	max-width: 100%;
+	width: 26em;
+	max-width: 25.6em;
+	margin: 0.2em;
+}
+.section__item > img {
+	max-width: 3.2em;
+	margin: 0.4em;
+}
+.section__item-detail {
+	margin: 0.5em;
 }
